--- a/src/components/CharacterCard.module.css
+++ b/src/components/CharacterCard.module.css
@@ -1,9 +1,9 @@
 .card {
     padding: 1.5rem;
     border: 2px solid var(--color);
-    border-radius: 2rem 1rem;
+    border-radius: 5rem;
     text-align: center;
-    height: 100%;
+    height: 88%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,24 +11,23 @@
 }
 
 .card:hover {
-    background-color: var(--green);
-    transform: scaleX(.9);
+    background-color: rgb(241, 181, 50);
+    transform: scale(1.1);
 }
 
 .cardImage {
-    width: 10rem;
-    height: 15rem;
+    width: 17rem;
+    height: 23rem;
     margin: 0 auto 1rem;
     background-position: center;
     background-size: cover;
-    border-radius: 1.5rem;
+    border-radius: 3rem;
     box-shadow: .1rem .1rem .1rem var(--color);
 }
 
 a {
     text-decoration: none;
     color: inherit;
-
     font-family: Verdana, Tahoma, sans-serif;
     font-size: 25px;
     font-weight: 800;
