--- a/src/components/CharacterList.module.css
+++ b/src/components/CharacterList.module.css
@@ -4,3 +4,15 @@
     grid-auto-rows: 1fr;
     grid-gap: 1.5rem;
 }
+
+@media (max-width: 900px) {
+    .container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
+}
